# mltemplate

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mltemplate/: __init__.py  config.py  eda.py  ensemble.py  storage.py
src/mltemplate/data/: __init__.py  manager.py  sources.py
src/mltemplate/features/: __init__.py  engineer.py
src/mltemplate/tuning/: __init__.py  adapters.py  tuner.py
