[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mltemplate"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "optuna>=3.5",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "scipy>=1.12",
]

[project.optional-dependencies]
kaggle   = ["kaggle>=1.6"]
xgboost  = ["xgboost>=2.0"]
lightgbm = ["lightgbm>=4.0"]
catboost = ["catboost>=1.2"]
all      = ["mltemplate[kaggle,xgboost,lightgbm,catboost]"]

[tool.hatch.build.targets.wheel]
packages = ["src/mltemplate"]
